deploy/pushetta-be-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pushetta
  labels:
    app: pushetta
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pushetta
    spec:
      containers:
        - name: pushetta-api
          image: guglielmino/pushetta-api:1.1.4-rev1 
          command: ["python"]
          args: ["pushetta/manage.py", "runserver", "0.0.0.0:8001"]
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
          ports:
            - containerPort: 8001
          volumeMounts:
            - mountPath: "/usr/share/pushetta/certs"
              name: pushetta-certs
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: pushetta-certs
          secret:
            secretName: pushetta-certs
