deploy/pushetta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushetta
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    run: pushetta
  type: NodePort
