deploy/pushetta-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: pushetta-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.pushetta.com
    http:
      paths:
      - path: /|/(.+)
        backend:
          serviceName: pushetta
          servicePort: 8001
